Added more MVP widget placeholders and AddExpenseEvent.

--- a/war/Abstemious.html
+++ b/war/Abstemious.html
@@ -25,8 +25,8 @@
     </noscript>
 
     <h1>abstemious</h1>
-    <div id="abstemiousframe">
-    </div>
+    <div style="position: relative; float: right;" id="loginbox"></div>
+    <div id="abstemiousframe"></div>
 
   </body>
 </html>
